core: extended PlaybackAction with functions to retrieve handles and get modify the location
core: moved functionality from presenter-api into core for reusability, moved error handling dialog from presenter to ApplicationContext for reusability

editor-api: added new functionality to record annotations in the lectureEditor

editor-api: added TextTool to add Text at specific time points, as well as changing its properties

editor-api: added SelectionTool, to modify the location of PlaybackAction during editing

editor-api: added tests

editor-fx: added the ui components needed to use the new functionality of recording annotations in the lectureEditor

editor-fx: added shortcuts for pause/play and moving the current timestamp forwards/backwards according to the current zoom level

editor-fx: added "jump to annotation" with PageEventsView

javafx: added the stylus listener and extended the views and controls to record annotations

javafx: fixed auto sizing of the TextBoxSkin when changing font/-size/-color

presenter-api: added missing resources property

media: added new event types for finer granularity in event handling

--- a/lect-editor-fx/src/main/resources/views/main-toolbar/main-toolbar.css
+++ b/lect-editor-fx/src/main/resources/views/main-toolbar/main-toolbar.css
@@ -53,8 +53,7 @@
     -fx-max-height: -button-size;
 }
 
-.main-toolbar > .split-menu-button,
-.main-toolbar > .container > .split-menu-button {
+.main-toolbar > .split-menu-button {
     -button-width: 4em;
     -fx-pref-width: -button-width;
     -fx-min-width: -button-width;
@@ -67,11 +66,12 @@
     -fx-max-height: -button-height;
 }
 
-.main-toolbar > .container > .split-menu-button > .label {
-    -fx-padding: 0;
+.main-toolbar > .split-menu-button > .label {
+    -fx-padding: 0.25em;
 }
-.main-toolbar > .container > .split-menu-button.tool-bar-color > .label {
-    -fx-padding: 0.5em;
+
+.main-toolbar > .split-menu-button.tool-bar-color > .label {
+    -fx-padding: 0 0.55em;
 }
 
 .main-toolbar .stylus-icon {
@@ -128,4 +128,8 @@
 .main-toolbar .stroke-width-combo SvgIcon {
     -fx-icon-fill: black;
     -fx-icon-stroke: black;
+}
+
+.main-toolbar .stroke-width-combo {
+    -fx-pref-width: 2em;
 }
