--- a/lect-editor-fx/src/main/resources/views/page-events/page-events.css
+++ b/lect-editor-fx/src/main/resources/views/page-events/page-events.css
@@ -19,6 +19,9 @@
 .page-events .text-selection-icon {
 	-fx-icon-content: "M5.5,27.5h19v-15h-19V27.5z M8.5,24.5h2v-9h-2v-1h6v1h-2  v4h5v-4h-2v-1h6v1h-2v9h2v1h-6v-1h2v-4h-5v4h2v1h-6V24.5z M33.5,28.5c-1.1,0-2-0.9-2-2h2v-2h-2v-11c0-1.1,0.9-2,2-2c0.6,0,1-0.4,1-1  c0-0.6-0.4-1-1-1c-1.2,0-2.3,0.5-3,1.4c-0.7-0.8-1.8-1.4-3-1.4c-0.6,0-1,0.4-1,1c0,0.6,0.4,1,1,1c1.1,0,2,0.9,2,2v11h-2v2h2  c0,1.1-0.9,2-2,2c-0.6,0-1,0.4-1,1c0,0.6,0.4,1,1,1c1.2,0,2.3-0.5,3-1.4c0.7,0.8,1.8,1.4,3,1.4c0.6,0,1-0.4,1-1  C34.5,28.9,34.1,28.5,33.5,28.5z";
 }
+.page-events .text-selection-ext-icon {
+	-fx-icon-content: "M5.5,27.5h19v-15h-19V27.5z M8.5,24.5h2v-9h-2v-1h6v1h-2  v4h5v-4h-2v-1h6v1h-2v9h2v1h-6v-1h2v-4h-5v4h2v1h-6V24.5z M33.5,28.5c-1.1,0-2-0.9-2-2h2v-2h-2v-11c0-1.1,0.9-2,2-2c0.6,0,1-0.4,1-1  c0-0.6-0.4-1-1-1c-1.2,0-2.3,0.5-3,1.4c-0.7-0.8-1.8-1.4-3-1.4c-0.6,0-1,0.4-1,1c0,0.6,0.4,1,1,1c1.1,0,2,0.9,2,2v11h-2v2h2  c0,1.1-0.9,2-2,2c-0.6,0-1,0.4-1,1c0,0.6,0.4,1,1,1c1.2,0,2.3-0.5,3-1.4c0.7,0.8,1.8,1.4,3,1.4c0.6,0,1-0.4,1-1  C34.5,28.9,34.1,28.5,33.5,28.5z";
+}
 .page-events .line-icon {
 	-fx-icon-content: "M17.333,84.666c-0.512,0-1.023-0.195-1.414-0.586c-0.781-0.78-0.781-2.047,0-2.828L81.252,15.92   c0.781-0.781,2.047-0.781,2.828,0c0.781,0.78,0.781,2.047,0,2.828L18.747,84.08C18.356,84.471,17.845,84.666,17.333,84.666z";
 }
