--- a/lect-editor-fx/src/main/resources/views/media-track-controls/media-track-controls.fxml
+++ b/lect-editor-fx/src/main/resources/views/media-track-controls/media-track-controls.fxml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.Tooltip?>
+<?import javafx.scene.layout.HBox?>
+<?import org.lecturestudio.editor.javafx.view.FxToolbarView?>
 <?import org.lecturestudio.javafx.control.ButtonGroup?>
 <?import org.lecturestudio.javafx.control.SvgIcon?>
 <?import org.lecturestudio.javafx.control.TextSearchField?>
-
-<?import org.lecturestudio.editor.javafx.view.FxToolbarView?>
-
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Tooltip?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Slider?>
 <fx:root type="HBox" alignment="CENTER_LEFT" styleClass="media-track-controls" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
 	<ButtonGroup>
 		<buttons>
@@ -117,9 +115,7 @@
 
 	<FxToolbarView fx:id="toolBar" HBox.hgrow="ALWAYS"/>
 
-	<Separator/>
-
-	<HBox styleClass="search-box" alignment="CENTER_RIGHT" HBox.hgrow="ALWAYS">
+	<HBox styleClass="search-box" alignment="CENTER_RIGHT" HBox.hgrow="ALWAYS" maxWidth="300">
 		<Label fx:id="searchStateLabel" managed="false" visible="false"/>
 		<ButtonGroup>
 			<buttons>
