editor-fx: extended search field width to show the whole prompt text editor-api: normalize loudness as default when importing recordings

--- a/lect-editor-fx/src/main/resources/views/page-replace/page-replace.fxml
+++ b/lect-editor-fx/src/main/resources/views/page-replace/page-replace.fxml
@@ -114,7 +114,7 @@
                         </buttons>
                     </ButtonGroup>
                     <TextSearchField fx:id="searchFieldNewDocument" promptText="%page.replace.search"
-                                     styleClass="search-field"/>
+                                     styleClass="search-field" minWidth="190"/>
                 </HBox>
 
             </VBox>
