lectureEditor: Audio Loudness Normaliaztion and QoL improvements (#804)
* editor: added audio loudness normalization
editor: added adjust audio loudness functionality when importing recordings
editor: made new document in ReplacePageView searchable
editor: added new shortcuts
editor: added functionality of exporting current pdf page
editor: improved view of page events
editor: fixes of wrong usage of ProgressDialogView to prevent unusability of editor in error case

* changed wording of loudness normalization text

* editor: Fixes to texts, placing of new loudness normalization feature, and shortcut

* editor: deactivate move and zoom-out button, unless zoomed in

* editor-fx: extended search field width to show the whole prompt text
editor-api: normalize loudness as default when importing recordings

--- a/lect-editor-fx/src/main/resources/views/main-menu/main-menu.fxml
+++ b/lect-editor-fx/src/main/resources/views/main-menu/main-menu.fxml
@@ -5,13 +5,13 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SeparatorMenuItem?>
-
 <fx:root type="MenuBar" useSystemMenuBar="true" maxHeight="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
 	<Menu fx:id="fileMenu" text="%menu.file">
 		<MenuItem fx:id="openRecordingMenuItem" accelerator="shortcut+o" text="%menu.open" />
 		<MenuItem fx:id="closeRecordingMenuItem" accelerator="shortcut+f4" text="%menu.close" />
 		<SeparatorMenuItem />
 		<MenuItem fx:id="saveDocumentMenuItem" text="%menu.save.document" />
+		<MenuItem fx:id="saveCurrentPageMenuItem" text="%menu.save.page.current"/>
 		<MenuItem fx:id="saveRecordingAsMenuItem" text="%menu.save.as" />
 		<SeparatorMenuItem />
 		<MenuItem fx:id="exportAudioMenuItem" text="%menu.export.audio" />
