--- a/lect-presenter-api/src/main/resources/html/message.css
+++ b/lect-presenter-api/src/main/resources/html/message.css
@@ -3,11 +3,17 @@ html {
 	padding: 0;
 }
 body {
-	font-family: Helvetica, Sans-Serif;
+	font-family: 'Segoe UI', Arial, sans-serif;
 	font-size: 1.2em;
 	line-height: 1.4;
 	padding: 0;
 	margin: 0;
+}
+pre {
+	font-family: inherit;
+	font-weight: 400;
+	margin: 0;
+	padding: 0;
 }
 
 .speech-bubble {
