presenter: changed default font for MessageDocument

--- a/lect-presenter-api/src/main/resources/html/message.css
+++ b/lect-presenter-api/src/main/resources/html/message.css
@@ -3,7 +3,7 @@ html {
 	padding: 0;
 }
 body {
-	font-family: 'Segoe UI', Arial, sans-serif;
+	font-family: 'Open Sans', Arial, sans-serif;
 	font-size: 1.2em;
 	line-height: 1.4;
 	padding: 0;
