--- a/lect-javafx/src/main/resources/css/event-timeline.css
+++ b/lect-javafx/src/main/resources/css/event-timeline.css
@@ -1,4 +1,5 @@
 .page-slider {
+    -fx-font-size: 0.75em;
     -fx-text-fill: -fx-text-inner-color;
     -fx-background-color: rgba(210, 210, 210, 0.7);
     -fx-border-radius: 5 5 5 5;
@@ -10,6 +11,7 @@
 .page-event-marker {
     -fx-fill: #63B3ED;
 }
+
 .page-event-delete-marker {
     -fx-fill: #FC8181;
 }
