--- a/lect-editor-fx/src/main/resources/views/page-events/page-events.fxml
+++ b/lect-editor-fx/src/main/resources/views/page-events/page-events.fxml
@@ -27,7 +27,7 @@
 					<EventTypeCellFactory />
 				</cellFactory>
 				<cellValueFactory>
-					<PropertyValueFactory property="actionType"/>
+					<EventTypeCellValueFactory />
 				</cellValueFactory>
 			</TableColumn>
 			<TableColumn text="%page.events.time">
