feat: add free-text quiz and marking of correct quiz options

--- a/lect-presenter-api/src/main/resources/html/quiz.css
+++ b/lect-presenter-api/src/main/resources/html/quiz.css
@@ -30,3 +30,25 @@ ul.options {
 	max-height: 2.75em;
 	overflow: hidden;
 }
+
+.correct {
+	color: green;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+	/* use !important to prevent issues with browser extensions that change fonts */
+	font-family: 'Symbols' !important;
+	speak: never;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+
+	/* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+.icon-check:before {
+	content: "\e900";
+}
